# HuerfanitosUTM_hackods

./: .gitignore  README.md  ai-log.md  main.py  pyproject.toml
.ipynb_checkpoints/: aguacate_deforestacion_michoacan-checkpoint.ipynb  analisis_global_gfw_ods15-checkpoint.ipynb
dashboard/: dashboard_styles.css  index.qmd
data/: 180822-cultivosagp-2014.csv  FAOSTAT_data_es_4-12-2026.csv
data/crudos/: cultivo_anual.xlsx  cultivo_pennes.xlsx  michoacan_vegetacion.csv
data/procesados/: aguacate_mich_2022.csv  aguacate_mich_municipios_2022.csv  biodiversidad_especies_ods15.csv  catalogo_gfw_completo.json  contexto_nacional_ods15.csv  dataset_maestro_ods15.csv  datos_limpios_michoacan.csv  forestal_mich_2022.csv  gestion_ambiental_ods15.csv  gfw_clases_bosque_natural.csv  gfw_cobertura_municipal_2010.csv  gfw_drivers_perdida_completo.csv  gfw_drivers_perdida_completo_es.csv  gfw_historico_agricola_mich.csv  (+8 more)
docs/: GUIA_TECNICA_DATOS.md  REPORTE_PROCESAMIENTO_VALIDACION.md  ai-log.html  index.html  inline_styles.css  search.json
notebooks/: 002_plotly.ipynb  003_biodiversidad_plotly.ipynb  Revision_de_historia.ipynb  aguacate2.ipynb  aguacate3.ipynb  aguacate4.ipynb  aguacate_deforestacion_michoacan.ipynb
scripts/: discover_metadata.py  etl_biodiversidad_ods15.py  etl_cleaning_log.txt  etl_gestion_ambiental_ods15.py  etl_globalforest_ods15.py  etl_maestro_ods15.py  etl_michoacan.py  etl_nacional_ods15.py  generate_metadata_transparencia.py  unified_dataset_builder.py
test/: dashboard.qmd  final.html  final.qmd  final_theme.css  index.qmd  index2.qmd
(+151 files in other folders)
